Add metadata to Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "panic_monitor"
+description = "helps you monitor your threads and deal with panics"
 version = "0.2.0"
 authors = ["Alex Sayers <alex.sayers@gmail.com>"]
+documentation = "https://docs.rs/panic_monitor/"
+repository = "https://github.com/asayers/panic_monitor"
+readme = "README"
+keywords = ["panic", "watchdog", "supervisor", "monitor"]
+license = "MIT OR Apache-2.0"
 
 [dev-dependencies]
 lazy_static = "1.0"
